# tensorrt_wrapper_for_onnx

./: CMakeLists.txt  README.md  buffer.cpp  buffer.hpp  buffer_pool.cpp  buffer_pool.hpp  cuda_runtime.cpp  cuda_runtime.hpp  execution_parse.cpp  execution_parse.hpp  onnx_tensorrt_wrapper.cpp  tensorrt_engine.cpp  tensorrt_engine.hpp  utils.cpp  utils.hpp  weights_graph_parse.cpp  weights_graph_parse.hpp
cmake/: FindTENSORRT.cmake  getcccl.cmake  getjsoncpp.cmake
cuda_impl/: convert_cuda_impl.cu  nonzero_cuda_impl.cu
example/: alexnet_example.cpp  example.cpp  hfnet_example.cpp  lenet_example.cpp  mobilenet_v2_example.cpp  resnet_example.cpp  squeezenet_example.cpp  vgg_example.cpp  yolov3-spp_example.cpp  yolov3-tiny_example.cpp  yolov3_example.cpp  yolov4_example.cpp  yolov5_example.cpp
example/alexnet/: generate_alexnet_onnx.py  onnx_to_tensorrt.sh
example/lenet/: generate_lenet5_onnx.py  inference.py  lenet.onnx  lenet5.py  lenet_infer_shape.onnx  lenet_simplify.onnx  net.engine  net_graph.json  net_inference.json  onnx_to_tensorrt.sh
example/mobilenet_v2/: generate_mobilenet_onnx.py  onnx_to_tensorrt.sh
example/resnet/: generate_resnet18_onnx.py  generate_resnet50_onnx.py  onnx_to_tensorrt.sh
example/squeezenet/: generate_squeezenet_onnx.py  onnx_to_tensorrt.sh
example/vgg/: generate_vgg_onnx.py  onnx_to_tensorrt.sh
example/yolov3/: README.md  net_inference.json  onnx_to_tensorrt.sh  simplify_yolov3_onnx.py  simplify_yolov3_spp_onnx.py  simplify_yolov3_tiny_onnx.py
example/yolov3-spp/: README.md  onnx_to_tensorrt.sh  simplify_yolov3_spp_onnx.py
example/yolov3-tiny/: README.md  onnx_to_tensorrt.sh  simplify_yolov3_tiny_onnx.py
example/yolov4/: README.md  models.py  onnx_to_tensorrt.sh  simplify_yolov4_onnx.py
example/yolov5/: README.md  onnx_to_tensorrt.sh  simplify_yolov5l_onnx.py  simplify_yolov5m_onnx.py  simplify_yolov5s_onnx.py  simplify_yolov5x_onnx.py
execution/: convert_execution.cu  convert_execution.hpp  data_convert_execution.cu  data_convert_execution.hpp  datamovement_execution.cu  datamovement_execution.hpp  execution.cpp  execution.hpp  format_convert_execution.cu  format_convert_execution.hpp  normalization_execution.cu  normalization_execution.hpp  transpose_execution.cu  transpose_execution.hpp  yolo_nms_execution.cu  yolo_nms_execution.hpp
execution_info/: dataformat_convert_execution_info.hpp  datatype_convert_execution_info.cu  datatype_convert_execution_info.hpp  execution_info.cpp  execution_info.hpp  onnx_model_execution_info.cpp  onnx_model_execution_info.hpp  reshape_execution_info.hpp  yolo_nms_execution_info.cu
node_create/: common.cpp  common.hpp  create_activation_node.cpp  create_batchnormalization_node.cpp  create_concatenation_node.cpp  create_concatenation_node.hpp  create_concatenaton_node.cpp  create_elementwise_node.cpp  create_gather_node.hpp  create_gemm_node.cpp  create_node.cpp  create_node.hpp  create_padding_node.cpp  create_pooling_node.cpp  create_reduce_node.cpp  create_resize_node.cpp  create_resize_node.hpp  create_shape_node.cpp  create_shuffle_node.cpp  create_unsqueeze_node.cpp  create_unsqueeze_node.hpp
node_info/: activation_node_info.cpp  batchnormalization_node_info.hpp  concatenation_node_info.cpp  concatenation_node_info.hpp  conv2d_node_info.cpp  gather_node_info.cpp  gemm_node_info.cpp  gemm_node_info.hpp  node_info.cpp  node_info.hpp  pooling_node_info.cpp  resize_node_info.cpp  resize_node_info.hpp  shuffle_node_info.cpp  shuffle_node_info.hpp  unsqueeze_node_info.cpp
python_scripts/: Readme  convert_fp32_to_fp16.py  execution.py  parse_onnx_model.py  parse_onnx_model_new.py  shufflenetv2_simplify.py  simplfy_and_infer_shape.py  test_hfnet_onnx_model_with_execution.py  test_lenet_onnx_model_with_execution.py  test_onnx_model.py  test_onnx_model_with_execution.py  test_yolov3_onnx_model_with_execution.py
src/: onnx_tensorrt_wrapper.cpp  onnx_tensorrt_wrapper.hpp
src/common/: buffer.cpp  buffer.hpp  buffer_pool.cpp  buffer_pool.hpp  cuda_runtime.cpp  cuda_runtime.hpp  logger.cpp  logger.hpp  non_copyable.hpp  utils.cpp  utils.hpp
src/engine/: execution_engine.hpp  graph_parse_engine.cpp  graph_parse_engine.hpp  tensorrt_engine.cpp  tensorrt_engine.hpp  tensorrt_wrapper.cpp  tensorrt_wrapper.hpp
src/execution/: base_execution.cpp  base_execution.hpp  dataformat_convert_execution.cu  dataformat_convert_execution.hpp  datatype_convert_execution.cu  datatype_convert_execution.hpp  execution_common.cpp  execution_common.hpp  execution_factory.cpp  execution_factory.hpp  execution_register.cpp  normalization_execution.cu  normalization_execution.hpp  reshape_execution.cu  reshape_execution.hpp  transpose_execution.cu  transpose_execution.hpp  trt_engine_execution.cpp  trt_engine_execution.hpp  yolo_nms_execution.cu  yolo_nms_execution.hpp
src/execution_info/: dataformat_convert_execution_info.cu  dataformat_convert_execution_info.hpp  datatype_convert_execution_info.cu  datatype_convert_execution_info.hpp  execution_info.cpp  execution_info.hpp  normalization_execution_info.cu  normalization_execution_info.hpp  onnx_model_execution_info.cpp  onnx_model_execution_info.hpp  reshape_execution_info.cu  reshape_execution_info.hpp  transpose_execution_info.cu  transpose_execution_info.hpp  yolo_nms_execution_info.cu  yolo_nms_execution_info.hpp
src/infer_engine/: buffer.hpp  execution_parse.cpp  execution_parse.hpp  onnx_tensorrt_wrapper.hpp  tensorrt_engine.cpp  tensorrt_engine.hpp  weights_graph_parse.cpp  weights_graph_parse.hpp
src/node/: activation_node.cpp  activation_node_info.cpp  activation_node_info.hpp  batchnormalization_node.cpp  batchnormalization_node_info.cpp  batchnormalization_node_info.hpp  concatenation_node.cpp  concatenation_node_info.cpp  concatenation_node_info.hpp  conv2d_node.cpp  conv2d_node_info.cpp  conv2d_node_info.hpp  elementwise_node.cpp  elementwise_node_info.cpp  elementwise_node_info.hpp  gather_node.cpp  gather_node_info.cpp  gather_node_info.hpp  gemm_node.cpp  gemm_node_info.cpp  gemm_node_info.hpp  identity_node.cpp  identity_node_info.cpp  (+41 more)
(+100 files in other folders)
